--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
-body{
-    background-color: #333;
-    color: #fff;
-    font-family: 'Baloo Bhaijaan', cursive;
+* {
+    font-family: courier new;
 }
-h1 {
+body{
+    width: 1200px;
     /*border-style: solid;*/
-    width:300px;
-    text-align: center;
 }
 ul {
     list-style-type: none;
+}
+a:link{
+    text-decoration: none;
+}
+a:active{
+    text-decoration: none;
 }
