--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,17 @@ body{
     width: 1200px;
     /*border-style: solid;*/
 }
-ul {
-    list-style-type: none;
-}
-a:link{
+a:link {
+    color: #333;
     text-decoration: none;
 }
-a:active{
-    text-decoration: none;
+a:visited {
+    color: #333;
+}
+a:hover {
+    color: #ecf0f1;
+    background: #333;
+}
+a:active {
+    color: #2ecc71;
 }
