--- a/match2/css/style.css
+++ b/match2/css/style.css
@@ -16,6 +16,10 @@ h2 {
     text-align: center;
     padding: 5px;
 }
+#test{
+    text-align: center;
+    color: #ffffff;
+}
 .results{
     /*background: #2980b9;*/
     color: #ffffff;
